--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'commons-codec:commons-codec:1.3'
-    compile "org.java-websocket:Java-WebSocket:1.3.5"
+    compile 'org.java-websocket:Java-WebSocket:1.3.5'
+    compile 'com.android.support:support-v4:26.+'
     testCompile 'junit:junit:4.12'
 }
