ui changed almost ok

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".RecordService" />
+        <service android:name=".recorder.RecordService" />
 
     </application>
 
