--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,11 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'commons-codec:commons-codec:1.3'
+    //WebSocket
     compile 'org.java-websocket:Java-WebSocket:1.3.5'
+    //rx
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     testCompile 'junit:junit:4.12'
 }
