ws server almost ok

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
 
         <service android:name=".recorder.RecordService" />
 
+        <service android:name=".server.ServerService" />
+
     </application>
 
 </manifest>
