--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     //web server
     compile 'com.yanzhenjie:andserver:1.0.3'
+    //j2v8
+    compile 'com.eclipsesource.j2v8:j2v8:4.5.0@aar'
     testCompile 'junit:junit:4.12'
 }
